--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/partytown": "^2.1.4",
     "@astrojs/preact": "^4.1.0",
+    "@gudupao/astro-i18n": "latest",
     "@tailwindcss/vite": "^4.1.7",
     "@types/aos": "^3.0.7",
     "aos": "3.0.0-beta.6",
