--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   },
   "dependencies": {
     "@astrojs/partytown": "^2.1.4",
-    "@astrojs/preact": "^4.1.0",
+    "@astrojs/react": "^4.3.0",
     "@gudupao/astro-i18n": "latest",
     "@tailwindcss/vite": "^4.1.7",
     "@types/aos": "^3.0.7",
     "aos": "3.0.0-beta.6",
     "astro": "^5.8.0",
-    "preact": "^10.26.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "sharp": "^0.34.2",
