refactor(project): 重构项目路径并优化 TypeScript 配置
- 更新 Layout 和 pages/index 文件中的组件导入路径，使用相对路径替代绝对路径

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,13 @@
     "jsxImportSource": "react",
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true
   },
   "exclude": ["dist"],
   "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "**/*"]
+  "include": [".astro/types.d.ts", "components/**/*.tsx", "plat.ts"]
 }
